# Quantum_Conduit

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  API.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LINKEDIN_POST.md  MANIFEST.in  PYPI_PUBLISHING.md  README.md  RELEASE.md  WEBSITE_COPY.md  YC_APPLICATION_RESPONSE.md  mypy.ini  publish_to_pypi.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  security-scan.yml
benchmarks/: __init__.py  bench_expectation.py  bench_gate_application.py  bench_sampling.py  benchmark_advanced_sota.py  benchmark_batch_autograd.py  benchmark_vs_sota.py
examples/: convex_optimization_demo.py  hybrid_classifier.py  probabilistic_inference_demo.py  vqe_h2.py
qconduit/: __init__.py  logging.py
qconduit/adiabatic/: __init__.py  evolution.py  schedules.py
qconduit/algorithms/: __init__.py  qaoa.py  vqe.py
qconduit/backend/: __init__.py  density_matrix.py  statevector.py
qconduit/batched/: __init__.py  apply.py  evaluate.py  state.py
qconduit/channels/: __init__.py  builtins.py  circuit_integration.py  core.py  utils.py
qconduit/circuit/: __init__.py  core.py
qconduit/convex/: __init__.py  core.py  ipm.py  kkt.py  lp.py  projected.py  qp.py  utils.py
qconduit/core/: __init__.py  device.py  module.py
qconduit/diagnostics/: __init__.py  core.py  debug_mode.py
qconduit/dsp/: __init__.py  conv.py  filters.py  fir.py  iir.py  stft.py  utils.py  windows.py
qconduit/evolution/: __init__.py  exact.py  trotter.py
qconduit/exact/: __init__.py  diagonalize.py
qconduit/experiments/: __init__.py  sweep.py
qconduit/features/: __init__.py  base.py  discretizer.py  encoders.py  pca.py  polynomial.py  scalers.py  utils.py
qconduit/fermion/: __init__.py  (+2 more)
scripts/: run_benchmarks.sh
tests/: __init__.py  conftest.py  test_adiabatic_evolution.py  test_adiabatic_interpolation.py  test_adiabatic_schedules.py  test_algorithms_vqe.py  test_ansatz_circuit_integration.py  test_backend_density_matrix.py  test_backend_statevector.py  test_batched_apply.py  test_batched_evaluate.py  test_batched_state.py  test_channels_builtins.py  test_channels_circuit_integration.py  test_channels_core.py  test_circuit_core.py  test_core_device_module.py  test_diagnostics_core.py  test_diagnostics_debug.py  test_evolution_exact.py  test_evolution_trotter.py  test_exact_diagonalize.py  test_examples.py  test_experiments_sweep_generic.py  test_experiments_sweep_vqe.py  test_fermion_mappings_bk.py  test_fermion_mappings_jw.py  test_fermion_operators.py  test_flakiness.py  test_gates_and_backend_statevector.py  test_gates_standard.py  test_grad_param_shift.py  test_grad_parameter_shift_core.py  test_grad_parameter_shift_vqe.py  test_integration_end_to_end.py  test_json_ir_roundtrip.py  test_layers_ansatzes.py  test_layers_hybrid.py  test_logging.py  test_measurement_sampling.py  (+38 more)
(+174 files in other folders)
